[project]
name = "ml-salary-prediction"
version = "0.1.0"
description = "Streamlit app for predicting developer salaries"
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "streamlit>=1.24",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "scikit-learn>=1.1",
]

# No [build-system] section so uv sync won't try to build a wheel

[tool.uv]
# Optional uv config placeholder